inji-web 1521 - code for delete api
